--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
                         <h2 class="section-title">ZeroHeights</h2>
                         <p class="about-description">
                             Welcome to ZeroHeights, where luxury meets comfort
-                            in the heart of the city. Established in 2015, we
+                            in the heart of the city. Established in 2025, we
                             have been providing exceptional accommodation
-                            experiences for travelers seeking the perfect blend
-                            of modern amenities and homely comfort.
+                            experiences for tourists seeking the perfect blend
+                            of modern amenities and homely comfort in the city
+                            of Calabar
                         </p>
 
                         <div class="about-features">
@@ -839,7 +840,7 @@
                             padding: 10px;
                             border-radius: 50px;
                             text-align: center;
-                            font-size: 25px;
+                            font-size: 20px;
                             color: white;
                             font-weight: 600;
                         "
@@ -975,22 +976,22 @@
                 <h2 class="modal-title">Complete Your Payment</h2>
                 <p class="modal-text">
                     Please transfer the total amount to the following bank
-                    account details. Your booking will be confirmed once we
-                    receive the payment.
+                    account details, using your name as reference. Your booking
+                    will be confirmed once we receive the payment.
                 </p>
 
                 <div class="bank-details">
                     <div class="bank-detail-row">
-                        <span class="bank-label">Bank Name:</span>
-                        <span>Premium Trust Bank</span>
+                        <span class="bank-label">Bank:</span>
+                        <span>Moniepoint MFB</span>
                     </div>
                     <div class="bank-detail-row">
-                        <span class="bank-label">Account Name:</span>
+                        <span class="bank-label">Acc Name:</span>
                         <span>ZeroHeights Ltd</span>
                     </div>
                     <div class="bank-detail-row">
-                        <span class="bank-label">Account Number:</span>
-                        <span>1234567890</span>
+                        <span class="bank-label">Acc No.:</span>
+                        <span style="color: var(--secondary)">1234567890</span>
                     </div>
                     <div class="bank-detail-row">
                         <span class="bank-label">Amount:</span>
